# MetriSCA

./: .clang-format  .clang-tidy  .gitignore  CHANGES.md  CMakeLists.txt  LICENSE.md  README.md  premake5.lua
.github/workflows/: build.yml  linter.yml  main.yml  test.yml  ubuntu-build.yml  windows-build.yml
.github/workflows/ubuntu/: build.yml
.github/workflows/windows/: build.yml
examples/: premake5.lua
examples/standalone/: premake5.lua
examples/standalone/src/: standalone.cpp
includes/: forward.hpp  metrisca.hpp  version.hpp
includes/app/: cli_application.hpp  cli_model.hpp  cli_view.hpp
includes/core/: application.hpp  csv_writer.hpp  distinguisher.hpp  errors.hpp  fileloader.hpp  matrix.hpp  metric.hpp  model.hpp  profiler.hpp  trace_dataset.hpp
includes/metrisca/: forward.hpp  version.hpp
includes/metrisca/core/: arg_list.hpp  assert.hpp  csv_writer.hpp  errors.hpp  indicators.hpp  lazy_function.hpp  logger.hpp  matrix.hpp  parallel.hpp  plugin.hpp  result.hpp  trace_dataset.hpp
includes/metrisca/distinguishers/: distinguisher.hpp  pearson_distinguisher.hpp
includes/metrisca/loaders/: loader.hpp
includes/metrisca/metrics/: basic_metric.hpp  guess_metric.hpp  guessing_entropy_metric.hpp  key_enumeration_metric.hpp  metric.hpp  mi_metric.hpp  pi_metric.hpp  rank_enumeration_metric.hpp  rank_estimation_metric.hpp  rank_metric.hpp  score_metric.hpp  success_rate_metric.hpp  ttest_metric.hpp
includes/metrisca/models/: hamming_distance_model.hpp  hamming_weight_model.hpp  identity_model.hpp  model.hpp
includes/metrisca/profilers/: profiler.hpp  standard_profiler.hpp
includes/metrisca/scores/: CPA.hpp  bayesian.hpp  old_bayesian.hpp  score.hpp
includes/metrisca/utils/: crypto.hpp  math.hpp  numerics.hpp  template_attack.hpp
includes/utils/: numerics.hpp
src/: CMakeLists.txt
src/app/: cli_application.cpp  cli_model.cpp  cli_view.cpp
src/core/: csv_writer.cpp  trace_dataset.cpp
src/distinguishers/: pearson_distinguisher.cpp  pearson_distinguisher.hpp
src/metrics/: guess_metric.cpp  guess_metric.hpp  guessing_entropy_metric.cpp  guessing_entropy_metric.hpp  mi_metric.cpp  mi_metric.hpp  pi_metric.cpp  pi_metric.hpp  rank_metric.cpp  rank_metric.hpp  score_metric.cpp  score_metric.hpp  success_rate_metric.cpp  success_rate_metric.hpp  ttest_metric.cpp  ttest_metric.hpp
src/metrisca/core/: csv_writer.cpp  logger.cpp  plugin.cpp  trace_dataset.cpp
src/metrisca/distinguishers/: distinguisher.cpp  pearson_distinguisher.cpp
src/metrisca/metrics/: basic_metric.cpp  guess_metric.cpp  guessing_entropy_metric.cpp  key_enumeration_metric.cpp  metric.cpp  mi_metric.cpp  pi_metric.cpp  rank_enumeration_metric.cpp  rank_estimation_metric.cpp  rank_metric.cpp  score_metric.cpp  success_rate_metric.cpp  ttest_metric.cpp
src/metrisca/models/: hamming_distance_model.cpp  hamming_weight_model.cpp  identity_model.cpp  model.cpp
src/metrisca/profilers/: profiler.cpp  standard_profiler.cpp
src/metrisca/scores/: CPA.cpp  bayesian.cpp  old_bayesian.cpp  score.cpp
src/metrisca/utils/: template_attack.cpp
src/models/: hamming_distance_model.cpp  hamming_distance_model.hpp  hamming_weight_model.cpp  hamming_weight_model.hpp  identity_model.cpp  identity_model.hpp
src/profilers/: standard_profiler.cpp  standard_profiler.hpp
tests/: premake5.lua
tests/src/: main.cpp  test_convolution.cpp  test_matrix_inverse.cpp
tools/: CMakeLists.txt  premake5.lua
tools/metriscacli/: CMakeLists.txt  premake5.lua
tools/metriscacli/src/: main.cpp
tools/metriscacli/src/app/: application.cpp  application.hpp  argument_parser.cpp  argument_parser.hpp  bin_loader.hpp  string_utils.hpp
